--- a/my_course/Natours/starter/css/style.css
+++ b/my_course/Natours/starter/css/style.css
@@ -8,10 +8,11 @@ Dark green: #28b485
 */
 
 html {
-    box-sizing: border-box;
+
+    font-size: 62.5%;
 }
 
-*, *:before, *:after {
+*, *::before, *::after {
     margin:0;
     padding:0;
     box-sizing: inherit;
@@ -20,10 +21,10 @@ html {
 body{
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 16px;
     line-height:1.7;
     color: #777;
-    padding:30px;
+    padding:3rem;
+    box-sizing: border-box;
 }
 
 .header{
@@ -43,12 +44,12 @@ body{
 
 .logo-box{
     position:absolute;
-    left:40px;
-    top:40px;
+    left:4rem;
+    top:4rem;
 }
 
 .logo{
-    height:35px
+    height:3.5rem;
 }
 
 .text-box{
@@ -65,14 +66,14 @@ body{
 
     backface-visibility: hidden;
 
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
 
 .heading-primary-main{
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
 
     -webkit-animation-name: moveInLeft;
     -moz-animation-name: moveInLeft;
@@ -90,9 +91,9 @@ body{
 
 .heading-primary-sub{
     display:block;
-    font-size:20px;
+    font-size:2rem;
     font-weight: 700;
-    letter-spacing:17.4px;
+    letter-spacing:1.75rem;
 
     animation:moveInRight 1s ease-out;
 }
@@ -100,11 +101,11 @@ body{
 @keyframes moveInLeft{
     0%{
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
 
     80%{
-        transform: translateX(10px);
+        transform: translateX(10rem);
     }
 
     100%{
@@ -116,11 +117,11 @@ body{
 @keyframes moveInRight{
     0%{
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
 
     80%{
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
 
     100%{
@@ -132,7 +133,7 @@ body{
 @keyframes moveInBottom{
     0%{
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
 
     100%{
@@ -145,20 +146,21 @@ body{
 .btn:visited{
     text-transform: uppercase;
     text-decoration:none;
-    padding:15px 40px;
+    padding:1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all .2s;
     position: relative;
+    font-size:1.6rem;
 }
 
 .btn:hover{
-    transform: translateY(-3px);
+    transform: translateY(-.3rem);
 }
 
 .btn:active{
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    transform: translateY(-.1rem);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 }
 
 .btn-white{
@@ -171,7 +173,7 @@ body{
     display:inline-block;
     height: 100%;
     width:100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top:0;
     left: 0;
